--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@nozbe/watermelondb": "^0.28.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.8",
+    "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.17",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-dev-client": "^6.0.20",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
@@ -22,15 +28,21 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-worklets": "0.5.1",
+    "react-native-mmkv": "^4.1.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.6",
+    "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.2"
   },
   "private": true
